# fastapi-router-versioning

./: .pre-commit-config.yaml  README.md  RELEASE_NOTES.md  pyproject.toml  test_versioner.py
.github/: labeler.yml
.github/workflows/: bump-pre-commit-hooks.yml  create-draft-release.yml  latest-changes.yml  pre-commit.yml  prepare-release.yml  test-redistribute.yml  test.yml
examples/: calver_app.py  download_static_assets.py  modular_monolith_two_versioners_app.py  mounted_subapps_app.py  multi_router_app.py  openapi_hook_app.py  self_hosted_docs_app.py  semver_app.py  semver_major_only_app.py  validation_error_code_app.py  validation_error_code_custom_handler_app.py  webhook_versioning_app.py
fastapi_router_versioning/: __init__.py  versioner.py
scripts/: prepare_release.py
tests/: test_calver.py  test_fastapi_integration.py  test_semver.py  test_versioner.py
