[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-router-versioning"
dynamic = ["version"]
description = "A zero-dependency, native routing versionizer for FastAPI."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Matteo Nieddu", email = "mat81black@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = [
    "fastapi >=0.115.0, !=0.137.0, !=0.137.1",
]

[project.urls]
Homepage = "https://github.com/mat81black/fastapi-router-versioning"
Repository = "https://github.com/mat81black/fastapi-router-versioning"
Issues = "https://github.com/mat81black/fastapi-router-versioning/issues"

[dependency-groups]
dev = [
    "httpx2>=0.28.0",
    "ruff>=0.14.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-dotenv>=0.5.2",
    "mypy>=1.17.0",
    "coverage[toml]>=7.11.0",
    "inline-snapshot >=0.21.1",
    "prek >=0.2.22",
    "ty>=0.0.28",
    "pyrefly>=0.60.0",
    "uvicorn>=0.49.0",
    "zizmor>=1.0.0",
    "httpx>=0.28.1",
]

[[tool.uv.index]]
url = "https://repo.tmaxlab.com/repository/tmax-pypi/simple/"


[tool.hatch.version]
path = "fastapi_router_versioning/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_router_versioning"]

[tool.mypy]
strict = true

[tool.ty.terminal]
error-on-warning = true

[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = [
    "fastapi_router_versioning",
    "tests"
]
relative_files = true
context = '${CONTEXT}'
omit = [
    ".venv/*",
]


[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
lines-between-types = 1
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.typos.default.extend-identifiers]
alls = "alls"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "--strict-config",
    "--strict-markers",
]
strict_xfail = true
filterwarnings = ["error"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["."]
